Updated with option for custom boot logo.

--- a/services-demo.ini
+++ b/services-demo.ini
@@ -1,9 +1,12 @@
-[motion]
+[init]
+bootlogo: []
+
+[THING 1]
 start: /some/command --start
 stop: /some/command --stop
 status: pgrep command | wc -l
 
-[ap]
+[THING 2]
 start: /some/command --start
 stop: /some/command --stop
 status: pgrep command | wc -l
