Added example custom boot screen.

--- a/services-demo.ini
+++ b/services-demo.ini
@@ -1,5 +1,12 @@
 [init]
-bootlogo: []
+#bootlogo: R,R,O,O,Y,Y,G,G,
+#          R,O,O,Y,Y,G,G,B,
+#          O,O,Y,Y,G,G,B,B,
+#          O,Y,Y,G,G,B,B,I,
+#          Y,Y,G,G,B,B,I,I,
+#          Y,G,G,B,B,I,I,V,
+#          G,G,B,B,I,I,V,V,
+#          G,B,B,I,I,V,V,V
 
 [THING 1]
 start: /some/command --start
